--- a/index.html
+++ b/index.html
@@ -1,51 +1,58 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title>Talat Bilgicer</title>
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="icon" href="images/favicon.ico">
+    <link href="https://fonts.googleapis.com/css?family=Merriweather|Montserrat|Sacramento&display=swap" rel="stylesheet">
+  </head>
+  <body>
+    <div class="top-container">
+      <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
+      <h1>I'm Talat</h1>
+      <h2>a graphic designer</h2>
+      <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
+      <img class="mountain" src="images/mountain.png" alt="mountain-img">
+      </div>
 
-<head>
-  <meta charset="utf-8">
-  <title>Talat's Personel Site</title>
-</head>
+      <div class="middle-container">
+        <div class="profile">
+          <img class="profile-img" src="images/vesikalık1.png" alt="profile-img">
+          <h2>Hello.</h2>
+          <p class="intro">I am a Mobile App Developer and Web Designer. I'm founder and CTO of T.A.M. Software Company.  I ❤️ to drink coffee when I'm coding.</p>
+        </div>
+        <hr>
+        <div class="skills">
+          <h2>My Skills.</h2>
+          <div class="skill-row">
+            <img class="skill-img" src="https://image.flaticon.com/icons/png/512/377/premium/377259.png" alt="skill-img">
+            <h3>Lorem & Ipsum</h3>
+            <p>Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p>
+          </div>
+          <div class="skill-row">
+            <img class="skill-img2" src="https://image.flaticon.com/icons/png/512/552/552220.png" alt="skill-img2">
+            <h3>Lorem Ipsum Dolor</h3>
+            <p>Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
+          </div>
+        </div>
+        <hr>
+        <div class="contact-me">
+          <h2>Get In Touch</h2>
+          <h3>Lorem ipsum dolor sit amet, non elit.</h3>
+          <p class="contact-message">Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales, tellus donec dui, ornare erat.</p>
+          <a class="btn" href="mailto:talatbilgicer@gmail.com">CONTACT ME</a>
+          </div>
+      </div>
 
-<body>
-  <table cellspacing = "20">
-    <tr>
-      <td><img src="images/vesikalik.png" alt="talat bilgiçer proile picture"></td>
-      <td><h1><a href="http://www.talatbilgicer.com">Talat Bilgiçer</a></h1>
-      <p><em>Founder and CTO of <strong>The App Brewery</strong>.</em></p>
-      <p>I am IOS and Web Developer. I love coffee and brew my own beers.</p></td>
-    </tr>
-  </table>
-  <hr>
-  <h3>Books and Teaching</h3>
-  <ul>
-    <li>The Complete IOS App Development Bootcamp</li>
-    <li>The Complete Web Development Bootcamp</li>
-  </ul>
-  <hr>
-  <h3>Work Experience</h3>
-  <table border="1">
-    <thead>
-      <tr>
-        <th>Dates</th>
-        <th>Work</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td>2010 - 2013</td>
-        <td>Lead Developer at Tempo App</td>
-      </tr>
-      <tr>
-        <td>2010</td>
-        <td>Researcher at The Institute Of Cognitive Neurosciences</td>
-      </tr>
-    </tbody>
 
-  </table>
-  <hr>
-  <a href="hobbies.html">My Hobbies</a>
-  <p><a href="contact.html">Contact Me</a></p>
-  <p><a href="skills.html">My Skills</a></p>
-</body>
+      <div class="bottom-container">
+        <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
+        <a class="footer-link" href="https://twitter.com/talatbilgicer"title target="_blank">Twitter</a>
+        <a class="footer-link" href="http://talatbilgicer.com/#home"title target="_blank">Website</a>
+        <p class="footer-name">© 2020 Talat Bilgiçer @ TAM Software Company</p>
+      </div>
 
+
+  </body>
 </html>
